@@ -25,6 +25,8 @@ ChangeLog about GNU GLOBAL
 	* split.c: use SPLIT structure which manage substring.
 	* gtagsop.c: now format version is 3 (pathindex format).
 	* configure.ac: fixed for autoconf-2.53 and renamed.
+	* gctags: inittable() added for each parser, which set up reserved
+	  word table.
 
 July 4 2002, Shigio Yamaguchi  <shigio@gnu.org>
 
